Fix 1px border alignment in filter-box

--- a/site/style.less
+++ b/site/style.less
@@ -66,7 +66,7 @@ img {
 // =============================== FORMS ===============================
 //
 
-	
+
 label {
 	.box-sizing(border-box);
 	float: left;
@@ -132,12 +132,12 @@ output {
 	bottom: 100%;
 	left: 0;
 	display: inline-block;
-	width: 50px; 
-	height: 20px; 
+	width: 50px;
+	height: 20px;
 	border-radius: @borderRadius;
 	margin-left: -25px;
 	margin-bottom: 8px;
-	text-align: center; 
+	text-align: center;
 	font-size: 15px;
 	line-height: 20px;
 	color: #fff;
@@ -155,7 +155,7 @@ output {
 		background: @highlightColor;
 	}
 
-	&:after { 
+	&:after {
 		content: "";
 		position: absolute;
 		top: 100%;
@@ -238,8 +238,8 @@ output {
 	}
 	.rating-range {
 		label { width: 5em; }
-		.range-wrap { 
-			width: calc(~"100% - 5em"); 
+		.range-wrap {
+			width: calc(~"100% - 5em");
 			.range-mark { width: 1.5em; }
 			.range-mark.from { width: 1em; }
 			.range { width: calc(~"100% - 4.5em"); }
@@ -306,7 +306,7 @@ output {
 		border-bottom: 0;
 		margin-bottom: 0;
 	}
-	
+
 	header {
 		position: relative;
 
@@ -329,16 +329,16 @@ output {
 				left: 98%;
 				top: 58%;
 				width: 240px;
-				height: 28px; 
+				height: 28px;
 				background: fade(@highlightColor, 90%);
 				border-radius: @borderRadius;
 				margin-top: -14px;
-				text-align: center; 
+				text-align: center;
 				font-size: 15px;
 				line-height: 30px;
 				z-index: 1;
 				color: white;
-				&:after { 
+				&:after {
 					content: "";
 					position: absolute;
 					top: 50%;
@@ -374,7 +374,7 @@ output {
 			text-transform: uppercase;
 			.transition(all 0.2s);
 
-			i { 
+			i {
 				display: inline;
 				color: @thirdColor;
 				font-size: 14/16em;
@@ -401,7 +401,7 @@ output {
 			color: @thirdColor;
 
 			&:focus,
-			&:hover { 
+			&:hover {
 				outline: none;
 				background-color: fade(@thirdColor, 20%);
 			}
@@ -454,12 +454,12 @@ output {
 		.content {
 			.box-sizing(border-box);
 			padding: 0 0.5em 1em;
-			
+
 			.showplace {
 				margin: 0.8em 0 0;
 			}
 
-			h3 { 
+			h3 {
 				margin: 0 0 0.2em;
 				color: #000;
 				text-transform: uppercase;
@@ -510,7 +510,7 @@ output {
 				background: @thirdColor;
 				border-color: @thirdColor;
 			}
-			h2 { 
+			h2 {
 				background: @thirdColor;
 				border-top-color: @thirdColor;
 				border-bottom-color: @thirdColor;
@@ -566,7 +566,7 @@ output {
 @media screen and (min-width: 340px) {
 	.movie {
 		.extra {
-			img { 
+			img {
 				width: 150px;
 				float: right;
 				margin-left: 1em;
@@ -599,7 +599,7 @@ output {
 		header {
 			float: left;
 			width: 70%;
-			.rating { 
+			.rating {
 				min-width: 2.5em;
 				border-radius: 0;
 			}
@@ -617,7 +617,7 @@ output {
 				border-radius: 0;
 			}
 		}
-		.extra img { 
+		.extra img {
 			width: 30%;
 		}
 	}
@@ -645,9 +645,9 @@ output {
 			.rating { min-width: 3em; }
 			h2 i { font-size: 20/24em; }
 		}
-		.more { 
+		.more {
 			width: 20%;
-			width: calc(~"200px"); 
+			width: calc(~"200px");
 		}
 		.extra {
 			width: calc(~"100% - 3em");
@@ -670,15 +670,16 @@ output {
 	}
 }
 @media screen and (min-width: 1024px) {
-	body { 
-		padding-bottom: 5em; 
+	body {
+		padding-bottom: 5em;
 		.after-clear();
 	}
 	h1 { font-size: 100/24em; }
-	
-	.filters { 
+
+	.filters {
 		border-radius: @borderRadius;
 		margin-bottom: 2em;
+		background: @backgroundColor;
 		.after-clear();
 	}
 	.filters-wrap {
@@ -686,15 +687,27 @@ output {
 		width: 50%;
 		float: left;
 		border-right: 1px solid white;
+		background: @backgroundColor;
+		border-radius: @borderRadius 0 0 @borderRadius;
 	}
-	.two-col .input-box { 
-		width: 100%; 
-		&:first-child { border: 0; };
+	.input-box {
+		border: 0;
+		border-bottom: 1px solid #fff;
+		margin: 0;
+	}
+	.two-col .input-box {
+		width: 100%;
+		&:first-child { border-right: 0; }
 	}
 	.time-range:first-child label { border-radius: @borderRadius 0 0 0; }
-	.place-filter { 
+	.time-range:first-child { border-radius: @borderRadius 0 0 0; }
+	.place-filter {
 		padding: 0.6em;
 		border-radius: 0 @borderRadius @borderRadius 0;
+		border-right: 0;
+	}
+	.text-filter {
+		border-bottom: 0;
 	}
 	.text-filter label { border-radius: 0 0 0 @borderRadius; }
 
